# edenfintech-scanner-python

./: .env.age  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
docs/:  thesis-break-probability.md  EdenFinTech_Deep_Value_Scanner_Prompt.md  TODO.md  batch-17-18-19-analysis.md  batch-30-utilities-analysis.md  batch-31-post-mortem-baseline.md  codex-alignment-evaluation.md  debug.txt  epistemic-concerns-suggestions.md  epistemic-review-process.md  fmp_complete_endpoint_catalog.md  gemini-plan-alpha-evaluation.md  integration-plan.md  pipeline-evolution-b31-b52.md  plan-alpha-analysis.md  prompt-result-01.md  prompt-vs-system-evaluation-PYPL.md  system-comparison.md
kylers-system-codex/: 00-START-HERE.md  01-FINDING-IDEAS.md  02-FIRST-FILTER.md  03-DEEP-ANALYSIS.md  04-QUALITATIVE-DEEP-DIVE.md  05-VALUATION.md  06-THE-DECISION.md  07-POSITION-SIZING.md  08-AFTER-THE-BUY.md  09-GLOSSARY.md  10-REAL-EXAMPLES.md  11-CHEAT-SHEET.md  OPERATING-CHECKLIST.md
scripts/: setup-age.sh
tests/: test_analyst.py  test_automation.py  test_bootstrap_assets.py  test_cache.py  test_catalyst_dedup.py  test_config.py  test_data_quality.py  test_disc_ops_trading.py  test_epistemic_reviewer.py  test_evidence_classification.py  test_field_generation.py  test_fmp.py  test_forward_revenue.py  test_gemini.py  test_hardening.py  test_hardening_persist.py  test_hardening_regex.py  test_holding_review.py  test_importers.py  test_incentive_alignment.py  test_judge.py  (+17 more)
(+139 files in other folders)
