[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edenfintech-scanner-bootstrap"
version = "0.1.0"
description = "Bootstrap assets and validation tooling for the standalone EdenFinTech Python scanner"
requires-python = ">=3.11"

[project.scripts]
edenfintech-bootstrap = "edenfintech_scanner_bootstrap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
